--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
 
             <div>
-              <a href="#projects" class="btn">Check out my CV</a>
+              <a href="#projects" class="btn">My Portfolio</a>
               <a href="#contact" class="btn btn-white">How to Contact Me</a>
             </div>
           </div>
