--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                 <div class="project-caption">
                   <h5 class="white">Gun and Run</h5>
                   <p class="white">Level and Graphic Design</p>
+                  <p class="white">Language and Tools: Python, VS Code</p>
                 </div>
               </div>
             </a>
@@ -276,6 +277,7 @@
                 <div class="project-caption">
                   <h5 class="white">Bookstore software manager</h5>
                   <p class="white">UI/UX Design, Coding</p>
+                  <p class="white">Language and Tools: Java, Swing, Netbeans, Figma</p>
                 </div>
               </div>
             </a>
