--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <span class="hero-greeting"> Hello, I am</span>
             <h1 class="hero-heading">Doan Phong Luu</h1>
             <span class="hero-heading-subtitle"
-              >Game & Software Developer</span
+              >Software Developer</span
             >
             <div class="about-social-list">
               <div class="social-links-row">
