--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoanPLuu</title>
-    <link rel="shortcut icon" href="img/favicov2.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favico/favicov2.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/media.css" />
     <link
