--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
               <li class="nav-item">
                 <a href="#contact" class="nav-link">Contact</a>
               </li>
+              <li class="nav-item">
+                <a href="">Change Theme</a>
+              </li>
             </ul>
             <button id="nav-btn" class="nav-btn">
               <img
